--- a/style.sass
+++ b/style.sass
@@ -37,6 +37,12 @@ p
 .no-padding-right
 	padding-right: 0!important
 
+.active
+	display: block
+
+.hidden
+	display: none
+
 // __________________________________________________________header
 
 
@@ -380,3 +386,18 @@ p
 
 .col-four
 	width: 267px
+
+
+// __________________________________________________________ single post page
+
+.comment_single
+	margin-top: 50px
+
+// __________________________________________________________ comments
+
+.comment-container
+	margin: 25px 0
+
+.comment-container img
+	float: left
+	margin-right: 16px
